[project]
name = "Podriver"
version = "0.1.0"
description = "Practical Online Disaster Reduction Intelligence ViewER"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Avastrator", email = "avastrator@outlook.com" }
]
dependencies = [
  "flet",
  "flet_map",
  "playsound==1.2.2",
  "websockets",
  "brotli",
  "aiohttp",
  "edge_tts",
  "certifi"
]

[tool.flet]
org = "tech.longecko.podris"
product = "Podriver"
company = "Longecko Group"
copyright = "Copyright (C) 2025 by Longecko Group"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}